{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 16,
  "lineage": "4ef9a46e-237d-3805-64a6-3ae08ae7e6aa",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492100919:loadbalancer/app/application-load-balancer/d3728cc58a402937",
            "arn_suffix": "app/application-load-balancer/d3728cc58a402937",
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-load-balancer-21151109.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492100919:loadbalancer/app/application-load-balancer/d3728cc58a402937",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01ec06ec6e2534449"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a8d35c748b39d860"
              },
              {
                "subnet_id": "subnet-0f50e77a6b8cbdca5"
              }
            ],
            "subnets": [
              "subnet-0a8d35c748b39d860",
              "subnet-0f50e77a6b8cbdca5"
            ],
            "vpc_id": "vpc-024a683f5ff69cf3d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492100919:listener/app/application-load-balancer/d3728cc58a402937/b082c43bf0724318",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492100919:targetgroup/tg/9cd298570b8f5d99",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492100919:listener/app/application-load-balancer/d3728cc58a402937/b082c43bf0724318",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381492100919:loadbalancer/app/application-load-balancer/d3728cc58a402937",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492100919:targetgroup/tg/9cd298570b8f5d99",
            "arn_suffix": "targetgroup/tg/9cd298570b8f5d99",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492100919:targetgroup/tg/9cd298570b8f5d99",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-024a683f5ff69cf3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492100919:targetgroup/tg/9cd298570b8f5d99-20240131090039439800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492100919:targetgroup/tg/9cd298570b8f5d99",
            "target_id": "i-046f400d466ddb394"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.web",
            "module.ec2.data.aws_ami.amazon-2",
            "module.ec2.data.aws_availability_zones.available",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492100919:targetgroup/tg/9cd298570b8f5d99-20240131090039865800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492100919:targetgroup/tg/9cd298570b8f5d99",
            "target_id": "i-0ee34e8ddcdcd695b"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.web",
            "module.ec2.data.aws_ami.amazon-2",
            "module.ec2.data.aws_availability_zones.available",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0587a19e199d10a2e",
            "arn": "arn:aws:ec2:us-east-1:381492100919:instance/i-046f400d466ddb394",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046f400d466ddb394",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da19076cccfb9a75",
            "private_dns": "ip-10-0-1-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_ip": "34.227.53.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0736042c27b0ce8fa",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d35c748b39d860",
            "tags": {
              "Name": "WebServer1"
            },
            "tags_all": {
              "Name": "WebServer1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01ec06ec6e2534449"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon-2",
            "module.ec2.data.aws_availability_zones.available",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0587a19e199d10a2e",
            "arn": "arn:aws:ec2:us-east-1:381492100919:instance/i-0ee34e8ddcdcd695b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee34e8ddcdcd695b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0629a5f61ef2b8ddb",
            "private_dns": "ip-10-0-2-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.182",
            "public_ip": "54.157.55.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0446a31a5ca4e4253",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f50e77a6b8cbdca5",
            "tags": {
              "Name": "WebServer2"
            },
            "tags_all": {
              "Name": "WebServer2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01ec06ec6e2534449"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon-2",
            "module.ec2.data.aws_availability_zones.available",
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492100919:security-group/sg-01ec06ec6e2534449",
            "description": "Allow HTTP, SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ec06ec6e2534449",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "381492100919",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySecurityGroup"
            },
            "tags_all": {
              "Name": "MySecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-024a683f5ff69cf3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492100919:internet-gateway/igw-083a3a430a8086b22",
            "id": "igw-083a3a430a8086b22",
            "owner_id": "381492100919",
            "tags": {
              "Name": "MyInternetGateway"
            },
            "tags_all": {
              "Name": "MyInternetGateway"
            },
            "vpc_id": "vpc-024a683f5ff69cf3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492100919:route-table/rtb-0eba83fc1b267b6ad",
            "id": "rtb-0eba83fc1b267b6ad",
            "owner_id": "381492100919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083a3a430a8086b22",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyRouteTable"
            },
            "tags_all": {
              "Name": "MyRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-024a683f5ff69cf3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070917e7b731884db",
            "route_table_id": "rtb-0eba83fc1b267b6ad",
            "subnet_id": "subnet-0a8d35c748b39d860"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f646595c80a0ebd2",
            "route_table_id": "rtb-0eba83fc1b267b6ad",
            "subnet_id": "subnet-0f50e77a6b8cbdca5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492100919:subnet/subnet-0a8d35c748b39d860",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d35c748b39d860",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492100919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-024a683f5ff69cf3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492100919:subnet/subnet-0f50e77a6b8cbdca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f50e77a6b8cbdca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492100919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet2"
            },
            "tags_all": {
              "Name": "PublicSubnet2"
            },
            "vpc_id": "vpc-024a683f5ff69cf3d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492100919:vpc/vpc-024a683f5ff69cf3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037fbfa0789ef7040",
            "default_route_table_id": "rtb-0e87c97cf7e857cb1",
            "default_security_group_id": "sg-07e97a8a6edabd84f",
            "dhcp_options_id": "dopt-074893be0d89a68a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024a683f5ff69cf3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e87c97cf7e857cb1",
            "owner_id": "381492100919",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}